[superbuild] Add the super-project files Original commit: ojura/cartographer_superbuild@2fcb77b8100560b03239ede3a1d506b78a88cc4f

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+/cartographer
+/cartographer_ros
+/ceres-solver
+/clion-build
+/cmake-build-debug
+/cmake-build-relwithdebinfo
+/.idea
+
